--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.1",
     "react-transition-group": "^1.2.1",
     "web-vitals": "^1.1.2"
   },
